fix: minor updates

--- a/apps/v4/content/docs/components/accordion.mdx
+++ b/apps/v4/content/docs/components/accordion.mdx
@@ -11,6 +11,7 @@ links:
   name="accordion-demo"
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[80%] **:[.preview]:min-h-[400px]"
   description="An accordion with three items"
+  align="start"
 />
 
 ## Installation
