--- a/apps/v4/content/docs/installation/index.mdx
+++ b/apps/v4/content/docs/installation/index.mdx
@@ -3,6 +3,10 @@ title: Installation
 description: How to install dependencies and structure your app.
 ---
 
+## Pick Your Framework
+
+Start by selecting your framework of choice. Then follow the instructions to install the dependencies and structure your app. shadcn/ui is built to work with all React frameworks.
+
 <div className="mt-8 grid gap-4 sm:grid-cols-2 sm:gap-6">
   <LinkedCard href="/docs/installation/next">
     <svg
