--- a/apps/v4/content/docs/components/toast.mdx
+++ b/apps/v4/content/docs/components/toast.mdx
@@ -10,3 +10,5 @@ links:
 <Callout title="The toast component has been deprecated." className="mt-0">
   See the [sonner](/docs/components/sonner) documentation for more information.
 </Callout>
+
+If you're looking for the old toast component, see the [old docs](https://v3.shadcn.com/docs/components/toast) for more information.
