--- a/apps/v4/content/docs/components/typography.mdx
+++ b/apps/v4/content/docs/components/typography.mdx
@@ -7,6 +7,7 @@ component: true
 <ComponentPreview
   name="typography-demo"
   description="A collection of typographic elements."
+  className="[&_.preview]:!h-auto"
 />
 
 ## h1
