docs: typography page

--- a/apps/v4/content/docs/components/typography.mdx
+++ b/apps/v4/content/docs/components/typography.mdx
@@ -4,10 +4,13 @@ description: Styles for headings, paragraphs, lists...etc
 component: true
 ---
 
+We do not ship any typography styles by default. This page is an example of how you can use utility classes to style your text.
+
 <ComponentPreview
   name="typography-demo"
   description="A collection of typographic elements."
   className="[&_.preview]:!h-auto"
+  hideCode
 />
 
 ## h1
